--- a/crates/models/user/Cargo.toml
+++ b/crates/models/user/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-graphql = { workspace = true }
 common-models = { path = "../../models/common" }
+enums = { path = "../../enums" }
 fitness-models = { path = "../../models/fitness" }
 sea-orm = { workspace = true }
 serde = { workspace = true }
