refactor(services/miscellaneous): another one bites the dust

--- a/crates/services/miscellaneous/Cargo.toml
+++ b/crates/services/miscellaneous/Cargo.toml
@@ -8,25 +8,20 @@ apalis = { workspace = true }
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
-cache-service = { path = "../cache" }
 chrono = { workspace = true }
-chrono-tz = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
-config = { path = "../../config" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
 dependent-utils = { path = "../../utils/dependent" }
 enums = { path = "../../enums" }
 env-utils = { path = "../../utils/env" }
-file-storage-service = { path = "../../services/file-storage" }
 futures = { workspace = true }
 itertools = { workspace = true }
 markdown = { workspace = true }
 media-models = { path = "../../models/media" }
 migrations = { path = "../../migrations" }
-moka = { workspace = true }
 nanoid = { workspace = true }
 notification-service = { path = "../../services/notification" }
 providers = { path = "../../providers" }
@@ -37,6 +32,7 @@ sea-query = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 slug = { workspace = true }
+supporting-service = { path = "../supporting" }
 tokio = { workspace = true }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
