refactor(services/user): another one bites the dust

--- a/crates/services/supporting/Cargo.toml
+++ b/crates/services/supporting/Cargo.toml
@@ -12,4 +12,5 @@ config = { path = "../../config" }
 file-storage-service = { path = "../../services/file-storage" }
 media-models = { path = "../../models/media" }
 moka = { workspace = true }
+openidconnect = { workspace = true }
 sea-orm = { workspace = true }
