--- a/crates/services/user/Cargo.toml
+++ b/crates/services/user/Cargo.toml
@@ -4,15 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-apalis = { workspace = true }
 argon2 = { workspace = true }
 async-graphql = { workspace = true }
 application-utils = { path = "../../utils/application" }
-background = { path = "../../background" }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
-config = { path = "../../config" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
@@ -27,6 +24,7 @@ notification-service = { path = "../../services/notification" }
 openidconnect = { workspace = true }
 serde_json = { workspace = true }
 sea-orm = { workspace = true }
+supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
 user-models = { path = "../../models/user" }
 
