--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,3 +112,6 @@ reqwest = { version = "=0.12.7", features = ["json", "stream"] }
 tokio = { version = "=1.39.2", features = ["full"] }
 tracing = { version = "=0.1.40", features = ["attributes"] }
 uuid = { version = "=1.10.0", features = ["v4"], default-features = false }
+
+[profile.release]
+lto = true
