ci: add cache for target directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,6 +161,12 @@ jobs:
         with:
           key: ${{ matrix.platform.target }}-${{ steps.build.outputs.profile }}
           save-if: ${{ github.event_name != 'pull_request' }}
+      - uses: actions/cache@v3
+        with:
+          path: target
+          key: cargo-build-${{ runner.os }}-${{ hashFiles('Cargo.lock', 'rust-toolchain.toml') }}
+          restore-keys: |
+            cargo-build-${{ runner.os }}-
       - name: Install cross
         if: ${{ matrix.platform.command == 'cross' }}
         uses: taiki-e/cache-cargo-install-action@v2
