Webhook to import generic json (#1017)
* feat(backend): start to remove integration stuff from miscellaneous stuff

* chore(services): normalize imports

* refactor(misc): remove one layer of indirection

* feat(utils): extract into dependent utils

* refactor(utils): extract commit stuff to dependent utils

* fix(services/integration): call correct functions

* feat(services): call services correctly

* feat(misc): deploy job to handle entity added to collection

* refactor(services/importer): break into functions

* chore(services): more refactors

* refactor(services): remove dependecy of importer on misc

* refactor(services): move more stuff to utils

* refactor(models): move lot mappings to separate crate

* refactor(services): remove dependency of importer on fitness service

* feat(services): start using new stuff for importer

* feat(services): importer service

* feat(services): bring back vital functionality

* refactor(services): use anyhow::bail!

* chore(services): change return types of traits

* chore(integrations): more refactors

* refactor(services/integration): move into push, sink and yank modules

* chore(services/misc): remove useless function

* refactor(backend): move moka dependency

* feat(backend): more small backend changes

* chore(services/integration): remove more errors

* chore(backend): update more signatures

* chore(backend): cleanup more functions

* chore(backend): solve more type errors

* chore(backend): add logging when integration progress is ignored

* build(rust): upgrade dependencies

* fix(integration): adapt to new structure

* fix(integration): adapt to new structure

* fix(integration): adapt to new structure

* chore(integration): revert to const

* fix(integration): adapt to new structure

* chore(backend): use defaults when possible

* chore(backend): remove more useless values

* refactor(backend): ABS integration to required format

* ch

--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = { workspace = true }
 apalis = { workspace = true }
 application-utils = { path = "../../crates/utils/application" }
 async-graphql = { workspace = true }
-async-graphql-axum = "=7.0.9"
+async-graphql-axum = "=7.0.11"
 axum = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 background = { path = "../../crates/background" }
@@ -34,9 +34,11 @@ fitness-service = { path = "../../crates/services/fitness" }
 http = "=1.1.0"
 importer-resolver = { path = "../../crates/resolvers/importer" }
 importer-service = { path = "../../crates/services/importer" }
+integration-service = { path = "../../crates/services/integration" }
 itertools = { workspace = true }
 logs-wheel = "=0.3.1"
 media-models = { path = "../../crates/models/media" }
+moka = { workspace = true }
 migrations = { path = "../../crates/migrations" }
 miscellaneous-resolver = { path = "../../crates/resolvers/miscellaneous" }
 miscellaneous-service = { path = "../../crates/services/miscellaneous" }
@@ -51,6 +53,7 @@ serde_with = { workspace = true }
 schematic = { workspace = true }
 statistics-resolver = { path = "../../crates/resolvers/statistics" }
 statistics-service = { path = "../../crates/services/statistics" }
+supporting-service = { path = "../../crates/services/supporting" }
 tokio = { workspace = true }
 tower = { version = "=0.4.13", features = ["buffer"] }
 tower-http = { version = "=0.5.2", features = ["catch-panic", "cors", "trace"] }
