--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -19,16 +19,14 @@ env-utils = { path = "../../utils/env" }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
-database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
+dependent-utils = { path = "../../utils/dependent" }
 enums = { path = "../../enums" }
 fitness-models = { path = "../../models/fitness" }
-fitness-service = { path = "../../services/fitness" }
 flate2 = "=1.0.33"
 importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
-miscellaneous-service = { path = "../../services/miscellaneous" }
 providers = { path = "../../providers" }
 regex = { workspace = true }
 reqwest = { workspace = true }
@@ -40,9 +38,9 @@ serde_json = { workspace = true }
 serde_with = { workspace = true }
 serde-xml-rs = "=0.6.0"
 specific-models = { path = "../../models/specific" }
+supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
-user-models = { path = "../../models/user" }
 
 [package.metadata.cargo-machete]
 ignored = ["tracing"]
