--- a/crates/utils/dependent/Cargo.toml
+++ b/crates/utils/dependent/Cargo.toml
@@ -1,43 +1,37 @@
 [package]
-name = "miscellaneous-service"
+name = "dependent-utils"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
 apalis = { workspace = true }
-application-utils = { path = "../../utils/application" }
+application-utils = { path = "../application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
+chrono-tz = { workspace = true }
 common-models = { path = "../../models/common" }
-common-utils = { path = "../../utils/common" }
+common-utils = { path = "../common" }
+config = { path = "../../config" }
 database-models = { path = "../../models/database" }
-database-utils = { path = "../../utils/database" }
+database-utils = { path = "../database" }
 dependent-models = { path = "../../models/dependent" }
-dependent-utils = { path = "../../utils/dependent" }
 enums = { path = "../../enums" }
-env-utils = { path = "../../utils/env" }
-futures = { workspace = true }
+fitness-models = { path = "../../models/fitness" }
+importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
-markdown = { workspace = true }
 media-models = { path = "../../models/media" }
-migrations = { path = "../../migrations" }
 nanoid = { workspace = true }
-notification-service = { path = "../../services/notification" }
 providers = { path = "../../providers" }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
-sea-query = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
-slug = { workspace = true }
-supporting-service = { path = "../supporting" }
-tokio = { workspace = true }
+supporting-service = { path = "../../services/supporting" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
 user-models = { path = "../../models/user" }
-uuid = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["tracing"]
