--- a/crates/models/fitness/Cargo.toml
+++ b/crates/models/fitness/Cargo.toml
@@ -9,6 +9,7 @@ async-graphql = { workspace = true }
 async-trait = { workspace = true }
 common-models = { path = "../../models/common" }
 derive_more = { workspace = true }
+educe = { workspace = true }
 enums = { path = "../../enums" }
 file-storage-service = { path = "../../services/file-storage" }
 rust_decimal = { workspace = true }
