--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Documentation website for Ryot"
 authors = ["Diptesh Choudhuri <ignisda2001@gmail.com>"]
 license = "GPL-v3"
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
