chore(backend): add new crate for external stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
     "crates/utils/common",
     "crates/utils/database",
     "crates/utils/dependent",
+    "crates/utils/external",
     "crates/utils/env",
 ]
 resolver = "2"
