--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -15,6 +15,7 @@ csv = "=1.3.0"
 data-encoding = "=2.6.0"
 enum_meta = { workspace = true }
 env-utils = { path = "../../utils/env" }
+external-utils = { path = "../../utils/external" }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
