--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -49,6 +49,7 @@
 		"sonner": "1.5.0",
 		"tailwind-merge": "2.5.4",
 		"tailwindcss-animate": "1.0.7",
+		"tiny-invariant": "1.3.3",
 		"ts-pattern": "5.5.0",
 		"ufo": "1.5.4",
 		"zod": "3.23.8",
