--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+async-graphql = { workspace = true }
 common-utils = { path = "../utils/common" }
 env-utils = { path = "../utils/env" }
 schematic = { workspace = true }
