--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-graphql = { workspace = true }
 common-models = { path = "../common" }
+config = { path = "../../config" }
 database-models = { path = "../database" }
 enums = { path = "../../enums" }
 importer-models = { path = "../importer" }
