refactor(backend): move function into service

--- a/crates/services/file-storage/Cargo.toml
+++ b/crates/services/file-storage/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 aws-sdk-s3 = { workspace = true }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
+media-models = { path = "../../models/media" }
 nanoid = { workspace = true }
