Revert "refactor(backend): move function into service"
This reverts commit 546175d4bcf0bd701f55d177c9952a269f1eb012.

--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -9,6 +9,7 @@ boilermates = { workspace = true }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 enums = { path = "../../enums" }
+file-storage-service = { path = "../../services/file-storage" }
 rust_decimal = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
