--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -8,6 +8,7 @@ async-graphql = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
+common-utils = { path = "../../utils/common" }
 enums = { path = "../../enums" }
 rust_decimal = { workspace = true }
 schematic = { workspace = true }
