Deduplicate media items for upcoming section (#1089)
* feat(backend): allow specifying dedupe for calendar events

* chore(frontend): adapt to new gql schema

* chore(backend): send new param

* Revert "chore(backend): send new param"

This reverts commit e99bdd1325c0d317c4f150ac5ba7973a4a9d74fc.

* Revert "chore(frontend): adapt to new gql schema"

This reverts commit 421c966d10fe258f9c2e584ae9d082a201cc45c2.

* Revert "feat(backend): allow specifying dedupe for calendar events"

This reverts commit 0be5c51c87f7b4ea2b8089c9b1c6b39c8e74e0ed.

* chore(services/misc): send new param for deduplicating events

* feat(services/misc): do not return duplicate elements for upcoming query

* chore(services/misc): change order of attrs

* refactor(backend): move function into service

* Revert "refactor(backend): move function into service"

This reverts commit 546175d4bcf0bd701f55d177c9952a269f1eb012.

* refactor(backend): move stuff to more appropriate place

* refactor(backend): move stuff around

* refactor(backend): move more functions over

* refactor(backend): move another struct over

* refactor(backend): move another struct over

* fix(frontend): swapped icons for manga and anime

* style(frontend): remove function bodies

* refactor(backend): do not use trait

* refactor(backend): move all functions to dependent utils

* build(ts): upgrade packages

* build(backend): update dependencies and rust version

--- a/crates/utils/common/Cargo.toml
+++ b/crates/utils/common/Cargo.toml
@@ -9,3 +9,4 @@ compile-time = "=0.2.0"
 const-str = { workspace = true }
 env-utils = { path = "../env" }
 reqwest = { workspace = true }
+serde = { workspace = true }
