--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -8,8 +8,8 @@ async-graphql = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
+common-utils = { path = "../../utils/common" }
 enums = { path = "../../enums" }
-file-storage-service = { path = "../../services/file-storage" }
 rust_decimal = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
