--- a/libs/ts-utils/package.json
+++ b/libs/ts-utils/package.json
@@ -4,9 +4,11 @@
 	"dependencies": {
 		"@conform-to/zod": "1.2.2",
 		"@ryot/generated": "workspace:*",
+		"clsx": "2.1.1",
 		"dayjs": "1.11.13",
 		"humanize-duration-ts": "2.1.1",
 		"lodash": "4.17.21",
+		"tailwind-merge": "2.5.4",
 		"tiny-invariant": "1.3.3"
 	},
 	"devDependencies": {
