--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -56,6 +56,7 @@
 		"recharts": "2.13.1",
 		"remix-routes": "1.7.7",
 		"remix-utils": "7.7.0",
+		"tailwind-merge": "2.5.4",
 		"tiny-invariant": "1.3.3",
 		"ts-pattern": "5.5.0",
 		"ufo": "1.5.4",
