--- a/libs/ts-utils/package.json
+++ b/libs/ts-utils/package.json
@@ -9,7 +9,8 @@
 		"humanize-duration-ts": "2.1.1",
 		"lodash": "4.17.21",
 		"tailwind-merge": "2.5.4",
-		"tiny-invariant": "1.3.3"
+		"tiny-invariant": "1.3.3",
+		"zod": "3.23.8"
 	},
 	"devDependencies": {
 		"@types/lodash": "4.17.13"
