--- a/apps/frontend/public/manifest.json
+++ b/apps/frontend/public/manifest.json
@@ -9,53 +9,51 @@
 	"description": "Track all facets of your life!",
 	"icons": [
 		{
-			"src": "/android-chrome-192x192.png",
+			"purpose": "maskable",
+			"sizes": "602.3529411764706x602.3529411764706",
+			"src": "icons/maskable_icon.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "48x48",
+			"src": "icons/maskable_icon_x48.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "72x72",
+			"src": "icons/maskable_icon_x72.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "96x96",
+			"src": "icons/maskable_icon_x96.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
+			"sizes": "128x128",
+			"src": "icons/maskable_icon_x128.png",
+			"type": "image/png"
+		},
+		{
+			"purpose": "maskable",
 			"sizes": "192x192",
+			"src": "icons/maskable_icon_x192.png",
 			"type": "image/png"
 		},
 		{
-			"src": "/android-chrome-512x512.png",
-			"sizes": "512x512",
-			"type": "image/png"
-		},
-		{
-			"src": "/apple-touch-icon.png",
-			"sizes": "180x180",
-			"type": "image/png"
-		},
-		{
-			"src": "/apple-touch-icon-120x120.png",
-			"sizes": "120x120",
-			"type": "image/png"
-		},
-		{
-			"src": "/apple-touch-icon-precomposed.png",
-			"sizes": "180x180",
-			"type": "image/png"
-		},
-		{
-			"src": "/apple-touch-icon-120x120-precomposed.png",
-			"sizes": "120x120",
-			"type": "image/png"
-		},
-		{
-			"src": "/icon-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "/icon-256x256.png",
-			"sizes": "256x256",
-			"type": "image/png"
-		},
-		{
-			"src": "/icon-384x384.png",
+			"purpose": "maskable",
 			"sizes": "384x384",
+			"src": "icons/maskable_icon_x384.png",
 			"type": "image/png"
 		},
 		{
-			"src": "https://raw.githubusercontent.com/IgnisDa/ryot/main/libs/assets/icon-512x512.png",
+			"purpose": "maskable",
 			"sizes": "512x512",
+			"src": "icons/maskable_icon_x512.png",
 			"type": "image/png"
 		}
 	]
