--- a/crates/models/common/Cargo.toml
+++ b/crates/models/common/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
+chrono = { workspace = true }
 educe = { workspace = true }
 enums = { path = "../../enums" }
 enum_meta = { workspace = true }
