--- a/crates/resolvers/statistics/Cargo.toml
+++ b/crates/resolvers/statistics/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
+common-models = { path = "../../models/common" }
 dependent-models = { path = "../../models/dependent" }
 media-models = { path = "../../models/media" }
 statistics-service = { path = "../../services/statistics" }
