build(services/statistics): add new deps to crate

--- a/crates/services/statistics/Cargo.toml
+++ b/crates/services/statistics/Cargo.toml
@@ -9,6 +9,9 @@ common-models = { path = "../../models/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
+enums = { path = "../../enums" }
+hashbag = { workspace = true }
+itertools = { workspace = true }
 media-models = { path = "../../models/media" }
 sea-orm = { workspace = true }
 supporting-service = { path = "../supporting" }
