--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -35,6 +35,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 strum = { workspace = true }
+supporting-service = { path = "../services/supporting" }
 tracing = { workspace = true }
 traits = { path = "../traits" }
 
