--- a/crates/utils/common/Cargo.toml
+++ b/crates/utils/common/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { workspace = true }
-compile-time = "=0.2.0"
+compile-time = { workspace = true }
 const-str = { workspace = true }
 env-utils = { path = "../env" }
 reqwest = { workspace = true }
