--- a/crates/migrations/Cargo.toml
+++ b/crates/migrations/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 enums = { path = "../enums" }
-indoc = "=2.0.5"
+indoc = { workspace = true }
 sea-orm = { workspace = true }
 sea-orm-migration = { workspace = true }
 tracing = { workspace = true }
