--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,8 @@ chrono-tz = "=0.10.0"
 compile-time = "=0.2.0"
 const-str = "=0.5.7"
 convert_case = "=0.6.0"
+csv = "=1.3.0"
+data-encoding = "=2.6.0"
 derive_more = { version = "=1.0.0", features = [
     "add",
     "add_assign",
@@ -81,11 +83,13 @@ educe = { version = "=0.6.0", features = [
 ], default-features = false }
 enum_meta = "=0.7.0"
 eventsource-stream = "=0.2.3"
+flate2 = "=1.0.34"
 futures = "=0.3.31"
 graphql_client = "=0.14.0"
 hashbag = "=0.1.12"
 http = "=1.1.0"
 indoc = "=2.0.5"
+isolang = { version = "=2.4.0", features = ["list_languages"] }
 itertools = "=0.13.0"
 jsonwebtoken = { version = "=9.3.0", default-features = false }
 lettre = "=0.11.10"
@@ -132,6 +136,7 @@ sea-query = "=0.32.0"
 serde = { version = "=1.0.214", features = ["derive"] }
 serde_json = "=1.0.132"
 serde_with = { version = "=3.11.0", features = ["chrono_0_4"] }
+serde-xml-rs = "=0.6.0"
 slug = "=0.1.6"
 sonarr-api-rs = "=3.0.0"
 strum = { version = "=0.26.3", features = ["derive"] }
