--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -20,7 +20,7 @@ educe = { workspace = true }
 enums = { path = "../enums" }
 graphql_client = { workspace = true }
 hashbag = { workspace = true }
-isolang = { version = "=2.4.0", features = ["list_languages"] }
+isolang = { workspace = true }
 itertools = { workspace = true }
 media-models = { path = "../models/media" }
 paginate = { workspace = true }
