--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ resolver = "2"
 
 [workspace.dependencies]
 askama = "0.12.1"
-anyhow = "=1.0.91"
+anyhow = "=1.0.93"
 apalis = { version = "=0.5.5", features = ["cron", "limit"] }
 argon2 = "=0.6.0-pre.1"
 async-graphql = { version = "=7.0.11", features = [
@@ -59,15 +59,15 @@ async-graphql = { version = "=7.0.11", features = [
 ] }
 async-graphql-axum = "=7.0.11"
 async-trait = "=0.1.83"
-aws-sdk-s3 = { version = "=1.58.0", features = ["behavior-version-latest"] }
-axum = { version = "=0.7.7", features = ["macros", "multipart"] }
+aws-sdk-s3 = { version = "=1.63.0", features = ["behavior-version-latest"] }
+axum = { version = "=0.7.9", features = ["macros", "multipart"] }
 boilermates = "=0.3.0"
 chrono = "=0.4.38"
 chrono-tz = "=0.10.0"
 compile-time = "=0.2.0"
 const-str = "=0.5.7"
 convert_case = "=0.6.0"
-csv = "=1.3.0"
+csv = "=1.3.1"
 data-encoding = "=2.6.0"
 derive_more = { version = "=1.0.0", features = [
     "add",
@@ -83,7 +83,7 @@ educe = { version = "=0.6.0", features = [
 ], default-features = false }
 enum_meta = "=0.7.0"
 eventsource-stream = "=0.2.3"
-flate2 = "=1.0.34"
+flate2 = "=1.0.35"
 futures = "=0.3.31"
 graphql_client = "=0.14.0"
 hashbag = "=0.1.12"
@@ -100,7 +100,7 @@ nanoid = "=0.4.0"
 openidconnect = "=3.5.0"
 paginate = "=1.1.11"
 radarr-api-rs = "=3.0.1"
-rand = "=0.9.0-alpha.2"
+rand = "=0.9.0-beta.0"
 regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
@@ -119,8 +119,8 @@ schematic = { version = "=0.17.5", features = [
     "validate",
     "yaml",
 ], default-features = false }
-scraper = "=0.20.0"
-sea-orm = { version = "=1.1.0", features = [
+scraper = "=0.21.0"
+sea-orm = { version = "=1.1.1", features = [
     "debug-print",
     "postgres-array",
     "macros",
@@ -131,21 +131,21 @@ sea-orm = { version = "=1.1.0", features = [
     "with-rust_decimal",
     "with-uuid",
 ], default-features = false }
-sea-orm-migration = "=1.1.0"
+sea-orm-migration = "=1.1.1"
 sea-query = "=0.32.0"
-serde = { version = "=1.0.214", features = ["derive"] }
-serde_json = "=1.0.132"
+serde = { version = "=1.0.215", features = ["derive"] }
+serde_json = "=1.0.133"
 serde_with = { version = "=3.11.0", features = ["chrono_0_4"] }
 serde-xml-rs = "=0.6.0"
 slug = "=0.1.6"
 sonarr-api-rs = "=3.0.0"
 strum = { version = "=0.26.3", features = ["derive"] }
-struson = { version = "=0.5.0", features = ["serde"] }
+struson = { version = "=0.6.0", features = ["serde"] }
 reqwest = { version = "=0.12.9", features = ["json", "stream"] }
-tokio = { version = "=1.41.0", features = ["full"] }
-tokio-util = { version = "=0.7.11", features = ["codec"] }
-tower = { version = "=0.4.13", features = ["buffer"] }
-tower-http = { version = "=0.5.2", features = ["catch-panic", "cors", "trace"] }
+tokio = { version = "=1.41.1", features = ["full"] }
+tokio-util = { version = "=0.7.12", features = ["codec"] }
+tower = { version = "=0.5.1", features = ["buffer"] }
+tower-http = { version = "=0.6.2", features = ["catch-panic", "cors", "trace"] }
 tracing = { version = "=0.1.41", features = ["attributes"] }
 tracing-subscriber = "=0.3.19"
 unkey = "=0.5.0"
