--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -16,3 +16,4 @@ rust_decimal = { workspace = true }
 schematic = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
+strum = { workspace = true }
