--- a/crates/utils/env/Cargo.toml
+++ b/crates/utils/env/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [build-dependencies]
 dotenv-build = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["dotenv-build"]
