--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -27,6 +27,7 @@ flate2 = { workspace = true }
 importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
+nanoid = { workspace = true }
 providers = { path = "../../providers" }
 regex = { workspace = true }
 reqwest = { workspace = true }
@@ -41,7 +42,6 @@ specific-models = { path = "../../models/specific" }
 supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
-uuid = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["tracing"]
